# oclib

./: .gitignore  README.md  pyproject.toml
src/oclib/: decorators.py  design_patterns.py  line_reader.py  parallel.py  utlis.py
