[project]
name = "oclib"
version = "0.0.1"
description = "Pure python toolset"
authors = [
    {name = "xfoobar", email = ""},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
"Homepage" = "https://github.com/xfoobar/oclib"

[tool.pdm.dev-dependencies]
dev = [
    "pip>=23.2.1",
    "setuptools>=68.1.0",
    "wheel>=0.41.1",
]
